--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.lloma93.coffeeorder.MainActivity">
 
+    <ScrollView
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -84,5 +91,5 @@
                 android:text="@string/order" />
 
         </LinearLayout>
-
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
